Improve commandline configuration settings, import KMs

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.commons-collections-3.2.jar=lib\\commons-collections-3.2.jar
 file.reference.commons-lang-2.2.jar=lib\\commons-lang-2.2.jar
 file.reference.ess.jar=lib\\ess.jar
 file.reference.java-getopt-1.0.13.jar=lib\\java-getopt-1.0.13.jar
+file.reference.javolution.jar=lib\\javolution.jar
 file.reference.log4j-1.2.15.jar=lib\\log4j-1.2.15.jar
 file.reference.odi-core.jar=lib\\odi-core.jar
 file.reference.ojdbc6.jar=lib\\ojdbc6.jar
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.ojdbc6.jar}:\
     ${file.reference.oracle.ucp_11.1.0.jar}:\
     ${file.reference.commons-collections-3.2.jar}:\
-    ${file.reference.ess.jar}
+    ${file.reference.ess.jar}:\
+    ${file.reference.javolution.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
